manifests/telemetry/base/loki/memberlist.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki-memberlist
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app.kubernetes.io/instance: loki
    app.kubernetes.io/part-of: memberlist
  ports:
    - name: tcp
      port: 7946
      targetPort: http-memberlist
      protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: loki-memberlist
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: loki
      app.kubernetes.io/part-of: memberlist
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: loki
            app.kubernetes.io/part-of: memberlist
      toPorts:
        - ports:
            - port: http-memberlist
