manifests/telemetry/base/loki/monitor.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: loki-metrics
spec:
  endpointSelector:
    matchExpressions:
      - key: app.kubernetes.io/instance
        operator: In
        values: [loki]
      - key: app.kubernetes.io/component
        operator: In
        values:
          - backend
          - read
          - write
  ingress:
    - fromEntities: [cluster]
      toPorts:
        - ports:
            - port: http-metrics
              protocol: TCP
          rules:
            http:
              - method: GET
                path: /metrics
