manifests/telemetry/base/loki/read.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki-read
  labels:
    app.kubernetes.io/name: loki-read
    app.kubernetes.io/component: read
    app.kubernetes.io/part-of: memberlist
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: loki-read
      app.kubernetes.io/component: read
      app.kubernetes.io/part-of: memberlist
  template:
    metadata:
      labels:
        app.kubernetes.io/name: loki-read
        app.kubernetes.io/component: read
        app.kubernetes.io/part-of: memberlist
    spec:
      serviceAccountName: loki-read
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
        seccompProfile:
          type: RuntimeDefault
      terminationGracePeriodSeconds: 300
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app.kubernetes.io/name: loki-read
                  app.kubernetes.io/component: read
              topologyKey: kubernetes.io/hostname
      containers:
        - name: loki
          image: loki:TO_BE_FILLED
          imagePullPolicy: IfNotPresent
          args:
            - -config.file=/etc/loki/config/config.yaml
            - -target=read
          volumeMounts:
            - mountPath: /etc/loki/config
              name: config
            - mountPath: /etc/loki/runtime-config
              name: runtime-config
            - mountPath: /var/run/s3-secrets
              name: s3-secrets
            - mountPath: /tmp
              name: tmp
            - mountPath: /var/loki
              name: data
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
          resources:
            limits:
              memory: 300Mi
              cpu: 500m
            requests:
              memory: 50Mi
              cpu: 100m
          ports:
            - name: http-metrics
              containerPort: 3100
              protocol: TCP
            - name: grpc
              containerPort: 9095
              protocol: TCP
            - name: http-memberlist
              containerPort: 7946
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /ready
              port: http-metrics
            initialDelaySeconds: 15
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
      volumes:
        - name: config
          configMap:
            name: loki
            items:
              - key: config.yaml
                path: config.yaml
        - name: runtime-config
          configMap:
            name: loki-runtime
        - name: s3-secrets
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: telemetry-s3-credentials
        - name: tmp
          emptyDir:
            medium: Memory
        - name: data
          ephemeral:
            volumeClaimTemplate:
              spec:
                storageClassName: topolvm-provisioner
                accessModes: [ReadWriteOnce]
                resources:
                  requests:
                    storage: 512Mi
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: loki-read
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: loki
      app.kubernetes.io/component: read
      app.kubernetes.io/name: loki-read
  ingress:
    - fromEntities: [cluster]
      toPorts:
        - ports:
            - port: http-metrics
              protocol: TCP
          rules:
            http:
              - method: GET
                path: /loki/api/v1/query(\?.+)?
              - method: GET
                path: /loki/api/v1/query_range(\?.+)?
              - method: GET
                path: /loki/api/v1/labels(\?.+)?
              - method: GET
                path: /loki/api/v1/label/.+/values(\?.+)?
              - method: GET
                path: /loki/api/v1/series(\?.+)?
              - method: POST
                path: /loki/api/v1/series
              - method: GET
                path: /loki/api/v1/index/stats(\?.+)?
              - method: GET
                path: /loki/api/v1/index/volume(\?.+)?
              - method: GET
                path: /loki/api/v1/index/volume_range(\?.+)?
              - method: GET
                path: /loki/api/v1/patterns(\?.+)?
              - method: GET
                path: /loki/api/v1/detected_fields(\?.+)?
              - method: GET
                path: /loki/api/v1/tail(\?.+)?
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: loki
      toPorts:
        - ports:
            - port: grpc
              protocol: TCP
          rules:
            http: [{}]
---
apiVersion: v1
kind: Service
metadata:
  name: loki-read
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: loki-read
    app.kubernetes.io/component: read
  ports:
    - name: http
      port: 3100
      protocol: TCP
      appProtocol: kubernetes.io/h2c
      targetPort: http-metrics
    - name: grpc
      port: 9095
      appProtocol: kubernetes.io/h2c
      targetPort: grpc
