manifests/telemetry/base/loki/write.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: loki-write
  labels:
    app.kubernetes.io/name: loki-write
    app.kubernetes.io/component: write
    app.kubernetes.io/part-of: memberlist
spec:
  replicas: 2
  podManagementPolicy: Parallel
  updateStrategy:
    rollingUpdate:
      partition: 0
  serviceName: loki-write-headless
  selector:
    matchLabels:
      app.kubernetes.io/name: loki-write
      app.kubernetes.io/component: write
      app.kubernetes.io/part-of: memberlist
  template:
    metadata:
      labels:
        app.kubernetes.io/name: loki-write
        app.kubernetes.io/component: write
        app.kubernetes.io/part-of: memberlist
    spec:
      serviceAccountName: loki-write
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
        seccompProfile:
          type: RuntimeDefault
      terminationGracePeriodSeconds: 300
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app.kubernetes.io/name: loki-write
                  app.kubernetes.io/component: write
              topologyKey: kubernetes.io/hostname
      containers:
        - name: loki
          image: loki:TO_BE_FILLED
          imagePullPolicy: IfNotPresent
          args:
            - -config.file=/etc/loki/config/config.yaml
            - -target=write
          volumeMounts:
            - mountPath: /etc/loki/config
              name: config
            - mountPath: /etc/loki/runtime-config
              name: runtime-config
            - mountPath: /var/run/s3-secrets
              name: s3-secrets
            - mountPath: /var/loki
              name: data
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
          resources:
            limits:
              memory: 1Gi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: 100m
          ports:
            - name: http-metrics
              containerPort: 3100
              protocol: TCP
            - name: grpc
              containerPort: 9095
              protocol: TCP
            - name: http-memberlist
              containerPort: 7946
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /ready
              port: http-metrics
            initialDelaySeconds: 15
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
      volumes:
        - name: config
          configMap:
            name: loki
            items:
              - key: config.yaml
                path: config.yaml
        - name: runtime-config
          configMap:
            name: loki-runtime
        - name: s3-secrets
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: telemetry-s3-credentials
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        storageClassName: topolvm-provisioner
        accessModes: [ReadWriteOnce]
        resources:
          requests:
            storage: 2Gi
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: loki-write
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: loki
      app.kubernetes.io/component: write
      app.kubernetes.io/name: loki-write
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: collector
      toPorts:
        - ports:
            - port: http-metrics
              protocol: TCP
          rules:
            http:
              - method: POST
                path: /otlp/v1/logs
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: loki
      toPorts:
        - ports:
            - port: grpc
              protocol: TCP
          rules:
            http: [{}]
---
apiVersion: v1
kind: Service
metadata:
  name: loki-write
  labels:
    app.kubernetes.io/component: write
    app.kubernetes.io/name: loki-write
  annotations:
    service.cilium.io/lb-l7: enabled
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: loki-write
    app.kubernetes.io/component: write
  ports:
    - name: http
      port: 3100
      protocol: TCP
      appProtocol: kubernetes.io/h2c
      targetPort: http-metrics
    - name: grpc
      port: 9095
      protocol: TCP
      appProtocol: kubernetes.io/h2c
      targetPort: grpc
---
apiVersion: v1
kind: Service
metadata:
  name: loki-write-headless
  labels:
    app.kubernetes.io/component: write
    app.kubernetes.io/name: loki-write
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app.kubernetes.io/name: loki-write
    app.kubernetes.io/component: write
  ports:
    - name: http
      port: 3100
      protocol: TCP
      appProtocol: kubernetes.io/h2c
      targetPort: http-metrics
    - name: grpc
      port: 9095
      protocol: TCP
      appProtocol: kubernetes.io/h2c
      targetPort: grpc
